homework_4/src/deploy_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  labels:
    task: one
    tier: homework
  annotations:
    container1: nginx
    container2: multitool  
  namespace: task1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          resources:
            limits:
              memory: "64Mi"
              cpu: "200m"
            requests:
              memory: "32Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          resources:
            limits:
              memory: "64Mi"
              cpu: "200m"
            requests:
              memory: "32Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 1443
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
