homework_4/src/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-multitool
  labels:
    app: multitool
  namespace: homework4
spec:
  containers:
    - name: multitool
      image: praqma/network-multitool:alpine-extra
      resources:
        limits:
          memory: "64Mi"
          cpu: "200m"
        requests:
          memory: "32Mi"
          cpu: "100m"
      ports:
        - name: http
          containerPort: 8090
          protocol: TCP
      livenessProbe:
        tcpSocket:
          port: 8090
        initialDelaySeconds: 10
        timeoutSeconds: 3
      readinessProbe:
        httpGet:
          path: /
          port: 8090
        initialDelaySeconds: 15
        timeoutSeconds: 5
        successThreshold: 1
        failureThreshold: 2
