homework_4/src/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: task2
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
