homework_4/src/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task2
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
